WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97990
[MathML] Baseline wrong for fractions or munder/mover with padding
https://bugs.webkit.org/show_bug.cgi?id=97990
Summary
[MathML] Baseline wrong for fractions or munder/mover with padding
Dave Barton
Reported
2012-09-30 20:23:58 PDT
Created
attachment 166400
[details]
These baselines are wrong. RenderMathMLFraction and RenderMathMLUnderOver baseline computations should properly allow for padding and borders.
Attachments
These baselines are wrong.
(530 bytes, text/html)
2012-09-30 20:23 PDT
,
Dave Barton
no flags
Details
Patch
(411.87 KB, patch)
2012-09-30 20:43 PDT
,
Dave Barton
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Barton
Comment 1
2012-09-30 20:43:49 PDT
Created
attachment 166402
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-10-01 10:47:43 PDT
Comment on
attachment 166402
[details]
Patch LGTM.
Dave Barton
Comment 3
2012-10-01 16:19:42 PDT
Committed
r130097
: <
http://trac.webkit.org/changeset/130097
>
WebKit Review Bot
Comment 4
2012-10-01 22:32:57 PDT
Re-opened since this is blocked by
bug 98114
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug